syntax = "proto3";

package aurora;

import "google/protobuf/any.proto";
import "market.proto";

option java_package = "com.aurora";

message AuroraRequest{

  string clientId = 1;
  string topic = 2;

}
message AuroraResponse{

  google.protobuf.Any message = 1;
}

service AuroraService{

  rpc request (AuroraRequest) returns (AuroraResponse);
  rpc subscribe (AuroraRequest) returns (stream AuroraResponse);
  rpc buyProduct (market.ProductBuyRequest) returns (market.BuySellProductResponse);
  rpc sellProduct (market.ProductSellRequest) returns (market.BuySellProductResponse);
  rpc checkAvailability (market.ProductBuyRequest) returns (market.AvailabilityResponse);

}